[package]
name = "geohash-tools"
version = "0.0.0"
authors = ["Jan Klinge <jan@klydra.dev>"]
description = "A collection of functions to manipulate GeoHashes"
documentation = "https://docs.rs/geohash-tools/"
repository = "https://github.com/ummo-oss/rust-geohash-tools"
edition = "2021"
path = "src/lib.rs"

[dependencies]
phf = "0.11.1"